Description
https://build.reactos.org/builders/Test%20VBox?numbuilds=200
Case 3: with a log catching the previously Unhandled exception and a "[SYSREG] timeout"
{{Apr 22 01:52 3d012a44059d... failure #7809}}
{{Apr 22 16:10 b569195ecfec... failure #7823}}
Running Wine Test, Module: msxml3, Test: httpreq
|
...
|
fixme:(dll/win32/urlmon/binding.c:1269) not supported string type 20
|
fixme:(dll/win32/urlmon/http.c:265) Unsupported This->base.bind_info.stgmedData.tymed 0
|
|
|
*** Assertion failed: LastEntry->Size != 0
|
*** Source File: /srv/buildbot/Build_GCCLin_x86/build/sdk/lib/rtl/heap.c, line 675
|
|
|
Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?
|
kdb:>
|
o
|
Execute '.cxr 0165E8E4' to dump context
|
(sdk/lib/rtl/workitem.c:230) Exception 0x80000003 while executing IO work item 0x7ACBD189
|
[SYSREG] timeout
|