[0.4.8][MSXML3] Fix buffer overflow in BindStatusCallback_GetBindInfo. CORE-14570

On testbots for test "msxml3 : httpreq" we could observe with DPH enabled:
*** Assertion failed: LastEntry->Size != 0
***   Source File: /srv/buildbot/Build_GCCLin_x86/build/sdk/lib/rtl/heap.c, line 675

Fix picked from 0.4.9-dev-756-g 708d26acf396d81fa475f3ce7b70d3346279b133

The fix was also sent to Wine:
https://source.winehq.org/git/wine.git/commit/a64403904dfc50ed81c1a724f9a322e5ae4a025b